--- a/Businessmall/Businessmall.Application.csproj
+++ b/Businessmall/Businessmall.Application.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{C0A4BB1F-6D85-4D32-A233-D104D0E6BCD7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Businessmall.Application</RootNamespace>
-    <AssemblyName>Businessmall.Application</AssemblyName>
+    <RootNamespace>Businessmall.Shop.Infrastructure</RootNamespace>
+    <AssemblyName>Businessmall.Shop.Infrastructure</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -43,39 +43,24 @@
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Commands\ShopUsers\" />
     <Folder Include="Event Handler\" />
-    <Folder Include="SqlQueries\Services\" />
+    <Folder Include="Event\" />
+    <Folder Include="SQLQueries\" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CommandHandlers\CheckoutOrderCommandHandlerWithResult.cs" />
-    <Compile Include="CommandResults\InsertShopOrderCommandResult.cs" />
-    <Compile Include="Commands\Order\AddOrderForUserCommand.cs" />
-    <Compile Include="Commands\Order\LoginShopUserCommand.cs" />
-    <Compile Include="Commands\Order\CheckoutOrderCommand.cs" />
-    <Compile Include="Commands\Order\SaveOrderCommand.cs" />
-    <Compile Include="Commands\Order\UpdateOrderConfirmationCommand.cs" />
-    <Compile Include="Events\OrderPlacedEvent.cs" />
-    <Compile Include="Events\OrderSavedEvent.cs" />
+    <Compile Include="CommandHandlers\LoginShopUserCommandHandler.cs" />
+    <Compile Include="Commands\AddOrderForUserCommand.cs" />
+    <Compile Include="Commands\LoginShopUserCommand.cs" />
     <Compile Include="Queries\Product\GetAvailableProductsQuery.cs" />
-    <Compile Include="Queries\Product\GetOrderCheckoutDetailsQuery.cs" />
-    <Compile Include="Queries\ShopUser\UserLoginQuery.cs" />
-    <Compile Include="QueryHandlers\Products\GetAvailableProductsQueryHandler.cs" />
-    <Compile Include="QueryHandlers\Products\GetOrderCheckoutDetailsQueryHandler.cs" />
-    <Compile Include="QueryHandlers\ShopUsers\UserLogInQueryHandler.cs" />
-    <Compile Include="QueryResults\Products\AvailableProduct.cs" />
-    <Compile Include="QueryResults\Products\CheckoutProduct.cs" />
-    <Compile Include="QueryResults\ShopUsers\LoggedInUser.cs" />
+    <Compile Include="Queries\ShopUser\UserLogin.cs" />
+    <Compile Include="QueryHandlers\UserLogInQueryHandler.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Shuttle.Core.Infrastructure, Version=4.2.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Shuttle.Core.Infrastructure.4.2.3\lib\net40-full\Shuttle.Core.Infrastructure.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Shuttle.Esb, Version=7.0.4.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Shuttle.Esb.7.0.4\lib\net40-full\Shuttle.Esb.dll</HintPath>
+    <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ninject.3.2.2.0\lib\net40\Ninject.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -84,29 +69,16 @@
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Businessmall.Application.Infrastracture\Businessmall.Application.Infrastracture.csproj">
-      <Project>{99dd39d1-cb7f-4459-8b26-f43c22ee4771}</Project>
-      <Name>Businessmall.Application.Infrastracture</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Businessmall\Businessmall.csproj">
       <Project>{ce3381a3-7984-44d0-b9d6-9ff9fea81cb9}</Project>
       <Name>Businessmall</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="SqlQueries\UserLoginQuery.sql" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="SqlQueries\GetAvailableProducts.sql" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="SqlQueries\GetOrderCheckoutDetailsQuery.sql" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="SqlQueries\CheckoutShopOrderQuery.sql" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="SqlQueries\InsertShopOrderToBackoffice.sql" />
+    <ProjectReference Include="..\Businessmall.Application.Infrastracture\Businessmall.Application.Infrastracture.csproj">
+      <Project>{99dd39d1-cb7f-4459-8b26-f43c22ee4771}</Project>
+      <Name>Businessmall.Application.Infrastracture</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
