--- a/Shop/packages.config
+++ b/Shop/packages.config
@@ -17,7 +17,9 @@
   <package id="Ninject.MVC4" version="3.2.1.0" targetFramework="net45" />
   <package id="Ninject.Web.Common" version="3.2.3.0" targetFramework="net45" />
   <package id="Ninject.Web.Common.WebHost" version="3.2.0.0" targetFramework="net45" />
-  <package id="Shuttle.Core.Infrastructure" version="4.2.3" targetFramework="net45" />
-  <package id="Shuttle.Esb" version="7.0.4" targetFramework="net45" />
+  <package id="Shuttle.Core.Data" version="8.0.0" targetFramework="net45" />
+  <package id="Shuttle.Core.Infrastructure" version="8.0.0" targetFramework="net45" />
+  <package id="Shuttle.Esb" version="8.0.0" targetFramework="net45" />
+  <package id="Shuttle.Esb.Sql.Subscription" version="8.0.0" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net45" />
 </packages>
