--- a/Businessmall.ServiceBus.Subscriber.Order/Businessmall.ServiceBus.Subscriber.Order.csproj
+++ b/Businessmall.ServiceBus.Subscriber.Order/Businessmall.ServiceBus.Subscriber.Order.csproj
@@ -83,9 +83,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommandHandlers\SaveOrderCommandHandler.cs" />
+    <Compile Include="CommandHandlers\ShopProductInventoryUpdateCommandHandler.cs" />
     <Compile Include="CommandHandlers\UpdateOrderConfirmationCommandHandler.cs" />
     <Compile Include="CommandHandlers\UpdatePurchasedQtyCommandHandler.cs" />
     <Compile Include="Commands\SaveOrderCommand.cs" />
+    <Compile Include="Commands\ShopProductInventoryUpdateCommand.cs" />
     <Compile Include="Commands\UpdateOrderConfirmationCommand.cs" />
     <Compile Include="Commands\UpdatePurchasedQtyCommand.cs" />
     <Compile Include="Host.cs" />
